--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,10 +28,7 @@ jobs:
       - name: Upload artifact
         uses: actions/checkout@v3
         with:
-          name: dist-files
-          path: |
-            dist
-            package.json
+          name: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
