--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,8 +25,8 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Upload artifact
-        uses: actions/checkout@v3
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
         with:
           name: dist-files
           path: dist
